<resources>
    <string name="app_name">Book Tracker</string>
    <string name="book_tracker">Book Tracker</string>
    <string name="login">Login</string>
    <string name="not_having_an_account_create_one">Not having an account? Create one</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_new_account">Create new account</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="status">Status</string>
    <string name="read_books">Read books</string>
    <string name="to_read_books">To read books</string>
    <string name="reading_books">Reading books</string>
    <string name="add_a_book">Add a book</string>
    <string name="sign_out">Sign out</string>
    <string name="review">Review</string>
    <string name="grade">Grade</string>
    <string name="add_book">Add book</string>
    <string name="book_cover">Book cover</string>
    <string name="check_for_nearby_libraries">Check for nearby libraries</string>
</resources>