<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".addbook.AddBookFragment">

            <TextView
                android:id="@+id/app_title_add_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/playfair_display"
                android:text="@string/book_tracker"
                android:textAlignment="center"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/add_author_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/playfair_display"
                android:text="@string/author"
                android:textAlignment="center"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/add_author_editview"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints="Author name"
                android:gravity="center"
                android:inputType="text"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/add_title_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/playfair_display"
                android:text="@string/title"
                android:textAlignment="center"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/add_title_editview"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints="Add title"
                android:gravity="center"
                android:inputType="text"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/add_status_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/playfair_display"
                android:text="@string/status"
                android:textAlignment="center"
                android:textSize="17sp" />

            <RadioGroup
                android:id="@+id/statusList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@id/radioButton">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:gravity="center" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:gravity="center" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:gravity="center" />
            </RadioGroup>

            <TextView
                android:id="@+id/add_review_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/playfair_display"
                android:text="@string/review"
                android:textAlignment="center"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/add_review_editview"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints="Add review"
                android:gravity="center"
                android:inputType="text"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/add_grade_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/playfair_display"
                android:text="@string/grade"
                android:textAlignment="center"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/add_grade_editview"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints="Add grade"
                android:gravity="center"
                android:inputType="number"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/add_book_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/add_book" />

        </LinearLayout>
    </ScrollView>
</layout>