<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/app_title_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/playfair_display"
        android:text="@string/book_tracker"
        android:textAlignment="center"
        android:textSize="35sp" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/login_email"
        android:layout_marginTop="70dp"
        android:autofillHints="e-mail address"
        android:inputType="textEmailAddress"
        android:gravity="center"
        android:layout_gravity="center"
        tools:ignore="LabelFor" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/login_password"
        android:layout_marginTop="30dp"
        android:autofillHints="e-mail address"
        android:inputType="textPassword"
        android:gravity="center"
        android:layout_gravity="center"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/login" />

    <TextView
        android:id="@+id/create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:fontFamily="@font/playfair_display"
        android:text="@string/not_having_an_account_create_one" />


</LinearLayout>